fix: improve SEO with proper meta tags and robots.txt
- Add comprehensive meta description for better search results
- Update page title to reflect actual application purpose
- Add relevant keywords meta tag for SEO optimization
- Include author and robots meta tags for crawler guidance
- Create valid robots.txt file to resolve crawling issues
- Allow all search engines to index content appropriately

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Professional CRM dashboard for lead management, opportunity tracking, and sales analytics. Convert leads to opportunities with advanced filtering, real-time metrics, and responsive design." />
+    <meta name="keywords" content="CRM, lead management, sales pipeline, opportunity tracking, sales analytics, dashboard, React, TypeScript" />
+    <meta name="author" content="Mini Seller Console" />
+    <meta name="robots" content="index, follow" />
+    <title>Mini Seller Console - Professional Lead Management & CRM Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
