--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Professional CRM dashboard for lead management, opportunity tracking, and sales analytics. Convert leads to opportunities with advanced filtering, real-time metrics, and responsive design." />
     <meta name="keywords" content="CRM, lead management, sales pipeline, opportunity tracking, sales analytics, dashboard, React, TypeScript" />
-    <meta name="author" content="Mini Seller Console" />
+    <meta name="author" content="Seller Console" />
     <meta name="robots" content="index, follow" />
-    <title>Mini Seller Console - Professional Lead Management & CRM Dashboard</title>
+    <title>Seller Console - Professional Lead Management & CRM Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
